[package]
name = "trash-cli"
version = "0.2.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
structopt = "0.2.14"
platform-dirs = "0.1.0"
lazy_static = "1.2.0"
regex = "1.1.0"
promptly = "0.1.5"
chrono = "0.4.6"
failure = "0.1.5"
colored = "1.7.0"
lscolors = "0.5.0"
trash-utils = "0.2.0"
