[package]
name = "trash-cli"
version = "0.3.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
chrono = "0.4.6"
colored = "1.7.0"
failure = "0.1.5"
lazy_static = "1.2.0"
lscolors = "0.5.0"
platform-dirs = "0.1.0"
promptly = "0.1.5"
regex = "1.1.0"
structopt = "0.2.14"
trash-utils = "0.2.0"
