[package]
name = "rubbish"
version = "0.3.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[[bin]]
name = "rubbish"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.6"
colored = "1.7.0"
home = "0.5.3"
lscolors = "0.5.0"
promptly = "0.1.5"
regex = "1.1.0"
structopt = "0.3.17"
trash-utils = "0.2.0"
